@@ -21,21 +21,7 @@
 package net.sf.marineapi.nmea.sentence;
 
 /**
- * <p>
  * SentenceValidator checks any String against NMEA 0183 format.
- * <p>
- * Any String is considered as a valid NMEA sentence if it meets the following
- * criteria:
- * <ul>
- * <li>String begins with '$' character
- * <li>Begin character is followed by 5 upper-case chars (sentence type id)
- * <li>String is max. 80 chars long (without &lt;CR&gt;&lt;LF&gt;)
- * <li>String does not contain any illegal characters
- * <li>Has a correct checksum, separated by '*' character (unless omitted)
- * </ul>
- * <p>
- * Sentences without checksum are validated only by checking the general
- * sentence characteristics.
  * 
  * @author Kimmo Tuukkanen
  * @version $Revision$
@@ -46,31 +32,61 @@ public final class SentenceValidator {
     }
 
     /**
-     * Validates of the specified String against NMEA 0183 sentence format.
+     * Tells if the specified String matches the NMEA 0183 sentence format.
+     * <p>
+     * String is considered as a sentence if it meets the following criteria:
+     * <ul>
+     * <li>Starts with '$' character
+     * <li>'$' is followed by 5 upper-case chars and a comma (sentence type id)
+     * <li>Length is max. 80 chars long (excluding &lt;CR&gt;&lt;LF&gt;)
+     * <li>String contains only printable ASCII characters
+     * <li>Checksum is correct and separated by '*' char (unless omitted)
+     * </ul>
+     * 
+     * @param nmea String to inspect
+     * @return true if recognized as sentence, otherwise false.
+     */
+    public static boolean isSentence(String nmea) {
+
+        if (nmea == null || "".equals(nmea)) {
+            return false;
+        }
+
+        int i = nmea.indexOf(Sentence.CHECKSUM_DELIMITER);
+
+        // printable ASCII chars 0x20 to 0x7E
+        String re = "^[$|!]{1}[A-Z0-9]{5}[,][\\x20-\\x7F]{0,72}[*][A-F0-9]{2}$";
+        if (i < 0) {
+            re = "^[$|!]{1}[A-Z0-9]{5}[,][\\x20-\\x7F]{0,75}$";
+        }
+
+        return nmea.matches(re);
+    }
+
+    /**
+     * Tells if the specified String is a valid NMEA 0183 sentence. String is
+     * considered as valid sentence if it passes the {@link #isSentence(String)}
+     * test and contains a valid checksum. Sentences without checksum are
+     * validated only by checking the general sentence characteristics.
      * 
      * @param nmea String to validate
      * @return <code>true</code> if valid, otherwise <code>false</code>.
      */
     public static boolean isValid(String nmea) {
-        if (nmea == null || "".equals(nmea)) {
-            return false;
+
+        boolean isValid = false;
+
+        if (SentenceValidator.isSentence(nmea)) {
+            int i = nmea.indexOf(Sentence.CHECKSUM_DELIMITER);
+            if (i > 0) {
+                String sum = nmea.substring(++i, nmea.length());
+                isValid = sum.equals(Checksum.calculate(nmea));
+            } else {
+                // no checksum
+                isValid = true;
+            }
         }
 
-        final String re;
-        int chkd = nmea.indexOf(String.valueOf(Sentence.CHECKSUM_DELIMITER));
-
-        // printable ASCII chars 0x20 to 0x7E
-
-        if (chkd < 0) {
-            re = "^[$|!]{1}[A-Z0-9]{5}[,][\\x20-\\x7F]{0,75}$";
-            return nmea.matches(re);
-        }
-
-        re = "^[$|!]{1}[A-Z0-9]{5}[,][\\x20-\\x7F]{0,72}[*][A-F0-9]{2}$";
-        int start = nmea.indexOf(Sentence.CHECKSUM_DELIMITER) + 1;
-        String chk = nmea.substring(start, nmea.length());
-
-        return nmea.matches(re) && chk.equals(Checksum.calculate(nmea));
+        return isValid;
     }
-
 }
